--- a/.github/workflows/python-zomboi.yml
+++ b/.github/workflows/python-zomboi.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -U yarl
-        pip install -U multidict
+        python -m pip install yarl
+        python -m pip install multidict
         pip install flake8
         pip install -r requirements.txt
         
